# speakeasy

./: .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  pyproject.toml
src/speakeasy/: __init__.py  cli.py  server.py  session.py  text.py
src/speakeasy/engines/: base.py  macos.py
src/speakeasy/web/: index.html
tests/: test_engine.py  test_text.py
